@@ -3,6 +3,7 @@ Revision history for Dist-Zilla-Plugin-GitIgnore
 {{$NEXT}}
           - Improve patterns for distribution tarball / directory
           - Add a skip_defaults attribute to GitIgnore
+          - Add a positive override for .gitignore itself to the .gitignore
 
 0.001     2025-07-20 18:02:12+02:00 Europe/Brussels
           Initial release to an unsuspecting world
